fixes overflowing hero section

--- a/src/App.css
+++ b/src/App.css
@@ -8,17 +8,23 @@ body {
 * {
   font-family: Poppins;
 }
+
 html {
-    scroll-snap-type: y mandatory;
-    scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+  scroll-behavior: smooth;
 }
+
 section {
   height: 100vh;
   scroll-snap-align: start;
   scroll-snap-stop: always;
 }
 
-#first{
-  scroll-margin-top: 64px;
-  height: calc(100vh-64px);
+#first {
+  display: flex;
+  flex-direction: column;
+}
+
+#firstHero {
+  margin:auto auto;
 }
